--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
   <h1>Tourism</h1>
 
   <div class="row">
-  	<div class="col-L4 col-M6 col-S12">
+    <div class="col-L4 col-M6 col-S12">
       <section>
-      <div id="eco">Eco tourism</div>
-   		<p>
-        Eco tourism is one of the fastest growing trends in the worldwide tourism industry. Environment has an intrinsic value which outweighs its value as a tourism asset.It is also agreed upon by environmental experts that social responsibility and sound environment with a perfect balance between quality and quantity, in tourism development, can ensure quality tourism.</p></section>
-  	</div>
-  	<div class="col-L4 col-M6 col-S12">
-      <section>
-      <div id="heritage">Heritage sites</div>
-  		<p>
-  		Heritage has important evidences of past incidents and changes and it is the necessity to conserve without political involvement and racial discrimination.When we talk about the relation of heritage into tourism industry, at first, holy cities such as Rome are acknowledged as a highly multifunctional and even multi heritage place.</p></section>
-  	</div>
-  	<div class="col-L4 col-M12 col-S12">
-      <section>
-      <div id="adventure">Adventure journey</div>
-  		<p>
-  		Going on adventures raises your tolerance for uncertainty. Placing yourself in situations where things don’t always go as planned—such as on an adventure trip—helps you learn to cope with the uncertainties in life. And there is no shortage of those.Adventure travel lets you safely “try on” alternate lives.</p></section>
+       <div id="eco">Eco tourism</div>
+   	<p>
+        Eco tourism is one of the fastest growing trends in the worldwide tourism industry. Environment has an intrinsic value which outweighs its value as a tourism asset.It is also agreed upon by environmental experts that social responsibility and sound environment with a perfect balance between quality and quantity, in tourism development, can ensure quality tourism.
+	</p>
+      </section>
+     </div>
+     <div class="col-L4 col-M6 col-S12">
+       <section>
+         <div id="heritage">Heritage sites</div>
+           <p>
+  	   Heritage has important evidences of past incidents and changes and it is the necessity to conserve without political involvement and racial discrimination.When we talk about the relation of heritage into tourism industry, at first, holy cities such as Rome are acknowledged as a highly multifunctional and even multi heritage place.
+	   </p>
+        </section>
+      </div>
+      <div class="col-L4 col-M12 col-S12">
+        <section>
+          <div id="adventure">Adventure journey</div>
+  	    <p>
+  	     Going on adventures raises your tolerance for uncertainty. Placing yourself in situations where things don’t always go as planned—such as on an adventure trip—helps you learn to cope with the uncertainties in life. And there is no shortage of those.Adventure travel lets you safely “try on” alternate lives.
+	    </p>
+	</section>
+      </div>
   </div>
-</div>
 </body>
 </html>
